--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
 </head>
 
 <body>
+    <header>
+        <div class="container-fluid">
+            <div class="right_header_info">
+                <ul>
+                    <li class="dinone">Contact Us : <img style="margin-right: 15px;margin-left: 15px;"
+                            src="images/phone_icon.png" alt="#"><a class="button" href="#">01717693872</a></li>
+                    <li class="dinone"><img style="margin-right: 15px;" src="images/mail_icon.png" alt="#"><a
+                            class="button" href="#">ashikur35-2627@gmail.com</a></li>
+                    <li class="dinone"><img style="margin-right: 15px;height: 21px;position: relative;top: -2px;"
+                            src="images/location_icon.png" alt="#"><a class="button" href="#">Zigatola,Dhanmondi</a>
+                    </li>
+                    <li class="button_user"><a class="button active" href="#">Login</a><a class="button"
+                            href="#">Register</a></li>
+                    <li><img style="margin-right: 15px;" src="images/search_icon.png" alt="#"></li>
+                    <li>
+                        <button type="button" id="sidebarCollapse">
+                            <img src="images/menu_icon.png" alt="#">
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
     <section class=" first flexiable-container">
         <div class="half-width">
             <h1><span class="a">We </span><span class="b">provide</span><span class="c"> Good</span><br>
@@ -101,7 +124,7 @@
     <br>
     <br>
     <section>
-        <div class="full flexiable-container">
+        <div class="sub flexiable-container">
             <div class="half-width2">
                 <h1 class="c">700K</h1>
                 <p>Youtube Subscribers</p>
